--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
         </div>
       </div>
     </div>
+    <div class="container my-5">
+      <h2 class="text-center mb-4">Why?</h2>
+      <div class="row">
+        <div class="col text-center">
+        <p>Just an interested fella' looking to build an app using ChatGPT prompts 🤖. More of my work <a href="https://calmurgu.com">here.</a></p>
+      </div>
+    </div>
     
     
     <script src="script.js"></script>
