--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </script>
   </head>
   <body>
+
     <div id='map'></div>
     <div id="controls" class="text-center">
       <h3>Filter</h3>
@@ -99,20 +100,12 @@
             <input class="dropdown-item" type="checkbox" value="Public" id="Public">
           </li>
           <li>
-            <label for="OtherType">Other</label>
-            <input class="dropdown-item" type="checkbox" value="OtherType" id="OtherType">
+            <label for="Private">Private</label>
+            <input class="dropdown-item" type="checkbox" value="Private" id="Private">
           </li>
         </div>
       </div>
-      
-
-
-
-
-
-
     </div>
-  </main>
     <div class="container mt-4">
       <h1 class="text-center">Partnership Jobs</h1>
       <p class="text-center">
