--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
       </div>
       <div class="btn-group">
-        <button class="btn btn-primary dropdown-toggle" type="button" id="salary-filter-btn">Toggle Salary Filter</button>
+        <button class="btn btn-primary dropdown-toggle" type="button" id="salary-filter-btn">By Salary</button>
         <div id="salary-slider-container">
           <input type="range" id="salary-slider" min="0" max="100000" step="5000" value="0">
           <div id="salary-slider-value"></div>
