--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
         </div>
       </div>
       <div class="btn-group">
+        <button class="btn btn-info" id="closing-soon-btn">Closing Soon</button>
+
+      </div>
+      <div class="btn-group">
         <button class="btn btn-info dropdown-toggle" type="button" id="salary-filter-btn">By Salary</button>
         <div id="salary-slider-container">
           <input type="range" id="salary-slider" min="0" max="100000" step="5000" value="0">
