--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div>
         <div class="col-md-3">
           <div class="card text-center my-3" data-toggle="tooltip" data-placement="top" title="Analyze job descriptions for keywords and requirements using OpenAI LLM">
-            <div class="card-body rmf-tbd">
+            <div class="card-body rmf-process">
               <i class="fas fa-file-alt fa-4x mb-3"></i>
               <h5 class="card-title">🤖 Job Analysis</h5>
             </div>
