--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
       <div class="row justify-content-center">
         <div id="chart"></div>
       </div>
-      <select id="intervalSelector">
-        <option value="daily">Daily</option>
-        <option value="weekly">Weekly</option>
-        <option value="monthly">Monthly</option>
-        <option value="yearly">Yearly</option>
+      <select id="intervalSelector" class="btn-info dropdown-toggle">
+        <option class="btn-info" value="daily">Daily</option>
+        <option class="btn-info" value="weekly">Weekly</option>
+        <option class="btn-info" value="monthly">Monthly</option>
+        <option class="btn-info" value="yearly">Yearly</option>
       </select>
       <canvas id="jobChart" width="400" height="200">
       </canvas>
