--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
     </script>
   </head>
   <body>
-
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+	Our automated Github action is giving us grief right now, so jobs aren't being updated. We're working on a fix!
+	<button type="button" class="close" data-dismiss="alert" aria-label="close">
+		<span aria-hidden="true">×</span>
+	</button>
+</div>
     <div id="map">
       <div id="job-count-container">
         <span id="job-count">0</span> Jobs
