--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
-            Our automated Github action is giving us grief right now, so jobs aren't being updated consistently. We're working on a fix!
+          <div class="alert alert-success alert-dismissible fade show text-center" role="alert">
+            Everything is running as it should.
             <button type="button" class="close" data-dismiss="alert" aria-label="close">
               <span aria-hidden="true">×</span>
             </button>
@@ -225,7 +225,13 @@
       <h2 class="text-center mb-4">Data</h2>
       <div class="row">
         <div class="col text-center">
-          <a href="jobs.json" id="downloadBtn" class="btn btn-info">Download</a>
+          <a href="jobs.json" id="downloadBtn" class="btn btn-info">Today's Data</a>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col text-center">
+          <a href="/data" id="downloadBtn" class="btn btn-info">Historical Data</a>
         </div>
       </div>
     </div>
