--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div class="alert alert-success alert-dismissible fade show text-center" role="alert">
-            Everything is running as it should.
+          <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+            Everything is running okay, but there is an issue with salaries that we're aware of and trying to solve. Essentially, Partnership's inconsistent salary/compensation format is throwing us off. Working on it!
             <button type="button" class="close" data-dismiss="alert" aria-label="close">
               <span aria-hidden="true">×</span>
             </button>
@@ -231,7 +231,7 @@
       <br>
       <div class="row">
         <div class="col text-center">
-          <a href="/data" id="downloadBtn" class="btn btn-info">Historical Data</a>
+          <a href="/data/index.html" id="downloadBtn" class="btn btn-info">Historical Data</a>
         </div>
       </div>
     </div>
@@ -239,7 +239,7 @@
       <h2 class="text-center mb-4">Why?</h2>
       <div class="row">
         <div class="col text-center">
-        <p>Just an interested fella' looking to build an app using ChatGPT prompts 🤖. More of my work <a href="https://calmurgu.com">here.</a></p>
+        <p>Cal Murgu © 2023. Just an interested fella' looking to build an app using ChatGPT prompts 🤖. More of my work <a href="https://calmurgu.com">here.</a></p>
       </div>
     </div>
     
