Regex changes for salary

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </div>
         <div class="col-md-3">
           <div class="card text-center my-3" data-toggle="tooltip" data-placement="top" title="Daily, monthly, and yearly tracking of jobs in information and library science in Canada">
-            <div class="card-body rmf-process">
+            <div class="card-body rmf-done">
               <i class="fas fa-bar-chart fa-4x mb-3"></i>
               <h5 class="card-title">Historical Job Tracking</h5>
             </div>
